# os_p

./: Procfile  database.db  pyproject.toml
migrations/: env.py
migrations/versions/: 6203ca654277_create_os_table.py
pinea/: app.py  database.py  models.py  pyproject.toml  schemas.py
pinea/migrations/versions/: 831d778af154_add_column_telefone_in_os_table.py
pinea/pinea/: settings.py
pinea/pinea/routers/: os.py
